const mongoose = require("mongoose");

const blogSchema = mongoose.Schema(
  {
    title: {
      type: String,
      required: true,
    },
    content: {
      type: String,
      required: true,
    },
    author: {
      type: String,
      required: true,
    },
    createdAt: {
      type: Date,
      default: Date.now,
    },
    updatedAt: {
      type: Date,
      default: Date.now,
    },
  },
  { timestamps: true } // Mongoose tự động thêm các trường `createdAt` và `updatedAt`
);

// Tạo model từ schema
const Blog = mongoose.model("Blog", blogSchema);

module.exports = Blog;
